cmake_minimum_required(VERSION 3.15)
project(reline CXX)
set(CMAKE_CXX_STANDARD 23)
add_executable(${PROJECT_NAME} main.cpp tee.cpp)
find_package(Boost REQUIRED COMPONENTS program_options system)
set(FMT_USE_STATIC_LIBS ON)
find_package(fmt REQUIRED)
target_link_libraries(${PROJECT_NAME} Boost::program_options Boost::system)
install(TARGETS ${PROJECT_NAME})
